--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -60,13 +60,11 @@
     .spotlight1 {
         grid-column: 1;
         grid-row: 2;
-        text-align: center;
         align-self: center;
         margin: 1rem;
     }
     .spotlight2 {
         grid-column: 3;
-        text-align: center;
         align-self: center;
     }
     .join {
