--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -3,8 +3,12 @@
 @media only screen and (min-width: 768px) {
 
     /*-----Footer------*/
+    .footer-content {
+        display: flex;
+    }
     .footer-content div {
         margin: 2rem;
+        flex: 1 1 auto;
     }
     .footer-content img {
         max-width: 75%;
@@ -40,6 +44,7 @@
         width: 75%;
         transition: ease-in-out 0.3s;;
         transform: scale(0.9);
+        text-align: center;
     }
     .media-card:hover {
         transform: scale(1.02);
